@@ -53,28 +53,55 @@ public class ContactManager {
 
         Scanner scanner = new Scanner(System.in);
         String userInput = scanner.next();
-        switch (userInput) {
-            case "1" -> System.out.println("Here is a list of our contacts: \n");
-            case "2" -> {
 
+
+        switch (userInput) {
+            case "1" -> {
+                Path contactPath = Paths.get("data", "Contacts.txt");
+                List<String> contactListFromFile = Files.readAllLines(contactPath);
+                for (int i = 0; i < contactListFromFile.size(); i += 1) {
+                    System.out.println(contactListFromFile.get(i));
+                }
+                List<String> lines = Files.readAllLines(Paths.get("data", "Contacts.txt"));
+            }
+            case "2" -> {
                 System.out.println("What is your Contacts name?");
                 newContact.name = scanner.next();
-                System.out.println(newContact.name);System.out.println("What is your Contacts phone number?");
+                System.out.println("What is your Contacts phone number?");
                 newContact.phoneNumber = scanner.next();
-                System.out.println(newContact.phoneNumber);
 
-                List<? extends Serializable> contactInfo = List.of(newContact.name + " | " + newContact.phoneNumber + " | ");
-
-                Path filepath = Paths.get("data", "Contacts.txt");
-
-                Files.write(filepath, (Iterable<? extends CharSequence>) contactInfo);
-                menu();
+                Files.write(
+                        Paths.get("data", "Contacts.txt"),
+                        Arrays.asList(String.format("%-15s | %-15s%n", newContact.name, newContact.phoneNumber)),
+                        StandardOpenOption.APPEND
+                );
             }
-            case "3" -> System.out.println("Search Contact Method");
+            case "3" -> {
+                System.out.println("Enter the Contact you're looking for:");
+                Path contactPath = Paths.get("data", "Contacts.txt");
+                List<String> contactListFromFile = Files.readAllLines(contactPath);
+
+                String name = scanner.next();
+
+                try {
+                    scanner = new Scanner(contactPath).useDelimiter(",");
+
+                    while (scanner.hasNext()) {
+                        final String lineFromFile = scanner.nextLine();
+                        if (lineFromFile.contains(name)) {
+                            System.out.println(lineFromFile);
+                            break;
+                        }
+                    }
+                } catch (IOException e) {
+                    System.out.println(" cannot write to file " + contactPath);
+                }
+            }
             case "4" -> System.out.println("Delete contact method");
-            case "5" -> System.out.println("Exit");
+            case "5" -> {
+                System.out.println("Thank you and have a great day!");
+                System.exit(0);
+            }
         }
-
-
     }
 }
